--- a/core/data/nlu.yml
+++ b/core/data/nlu.yml
@@ -1,174 +1,200 @@
 version: "2.0"
 nlu:
-  - intent: greet
-    examples: |
-      - hey
-      - hello
-      - hi
-      - hello there
-      - good morning
-      - good evening
-      - moin
-      - hey there
-      - let's go
-      - hey dude
-      - goodmorning
-      - goodevening
-      - good afternoon
-  - intent: goodbye
-    examples: |
-      - good afternoon
-      - cu
-      - good by
-      - cee you later
-      - good night
-      - bye
-      - goodbye
-      - have a nice day
-      - see you around
-      - bye bye
-      - see you later
-  - intent: affirm
-    examples: |
-      - yes
-      - y
-      - indeed
-      - of course
-      - that sounds good
-      - correct
-  - intent: deny
-    examples: |
-      - no
-      - n
-      - never
-      - I don't think so
-      - don't like that
-      - no way
-      - not really
   - intent: mood_great
     examples: |
-      - perfect
-      - great
-      - amazing
-      - feeling like a king
-      - wonderful
-      - I am feeling very good
-      - I am great
-      - I am amazing
-      - I am going to save the world
-      - super stoked
-      - extremely good
-      - so so perfect
-      - so good
-      - so perfect
+      - idealny
+      - wspaniały
+      - niesamowity
+      - czuć się jak król
+      - wspaniale
+      - Czuję się bardzo dobrze
+      - Jestem wielki
+      - Jestem niesamowity
+      - Uratuję świat
+      - super podekscytowany
+      - bardzo dobra
+      - taki idealny
+      - tak dobrze
+      - tak doskonały
+
   - intent: mood_unhappy
     examples: |
-      - my day was horrible
-      - I am sad
-      - I don't feel very well
-      - I am disappointed
-      - super sad
-      - I'm so sad
-      - sad
-      - very sad
-      - unhappy
-      - not good
-      - not very good
-      - extremly sad
-      - so saad
-      - so sad
-  - intent: bot_challenge
+      - mój dzień był okropny
+      - Jestem smutna
+      - Nie czuję się zbyt dobrze
+      - Jestem rozczarowany
+      - bardzo smutny
+      - Jestem taki smutny
+      - smutny
+      - bardzo smutny
+      - nieszczęśliwy
+      - niedobrze
+      - niezbyt dobrze
+      - bardzo smutny
+      - tak sad
+      - taki smutny
+
+  - intent: insults
     examples: |
-      - are you a bot?
-      - are you a human?
-      - am I talking to a bot?
-      - am I talking to a human?
-  - intent: ask_lower_stress
+      - To jest bzdura
+      - Nie jesteś kompetentny
+      - Jesteś niekompetentny
+      - Jesteś głupi
+      - Zamknij się
+      - Jesteś takim idiotą
+      - Jesteś idiotą
+      - Jesteś brzydka
+      - Jesteś dupkiem
+      - Obelgi
+      - głupek
+      - bicze
+      - szarpnięcie
+      - osła
+      - palant
+      - dupek
+      - głupi
+      - Pillock
+      - Billy nie ma kumpli
+      - miner
+      - głupi
+      - Idiota
+      - Dupek
+      - Spaz
+      - zboczeniec
+      - suka
+      - Dupa
+      - pedał
+      - pokrętło
+      - miotacz
+      - dureń
+      - żużel
+      - dresiarz
+      - nakrętka praca
+      - biggot
+      - oszukać
+      - wariat
+      - idiota
+      - głupiec
+      - rasistowski
+      - głupota
+      - Troll
+
+  - intent: religion
     examples: |
-      - What do I do if I'm too stressed?
-      - How can I lower my stress level?
-      - What are some good ways to lower stress?
-      - What are good ways to relax?
-      - What are some things I can do lower my stress?
-  - intent: ask_eat_healthy
+      - Religia
+      - modlitwa
+      - módl się
+      - pobożny
+      - Jezus
+      - Bóg
+      - Chrześcijanin
+      - Chrześcijaństwo
+      - katolik
+      - judaizm
+      - żydowskie
+      - Hindus
+      - hinduizm
+      - Buddyzm
+      - buddyjski
+      - Hinduista
+      - islam
+      - islamski
+      - Chrystus
+      - Semetyczny
+      - Papież
+      - Allah
+      - Budda
+      - Święta Trójca
+      - katolicyzm
+      - muzułmanin
+      - Religion
+      - prayer
+      - pray
+      - devout
+      - Jesus
+      - God
+      - Christian
+      - Christianity
+      - Catholic
+      - Judaism
+      - Jewish
+      - Hindu
+      - Hinduism
+      - Buddhism
+      - Buddhist
+      - Hinduist
+      - Islam
+      - Islamic
+      - Christ
+      - Semetic
+      - Pope
+      - Allah
+      - Buddah
+      - Holy Trinity
+      - Catholicism
+      - Muslim
+      - allahu akbar
+      - Holy War
+      - Islamist
+      - Hijab
+      - ISIS
+      - Islamic State
+      - Jihad
+      - Jewish Star
+
+  - intent: drugs
     examples: |
-      - What's considered a good diet?
-      - What's considered healthy food?
-      - How do I follow a healthy diet?
-      - What's an example of a healthy diet?
-      - How do I eat healthy?
-      - what's healthy diet
-  - intent: ask_exercise
+      - Hash brownie
+      - chwastów brownie
+      - Junkie
+      - Kokaina
+      - Met
+      - Metamfetamina
+      - Grzyby
+      - Ciasteczka kosmiczne
+      - Heroina
+      - LSD
+      - MDMA
+      - Opium
+      - Ritalin
+      - Narkoman
+
+  - intent: hateSpeech
     examples: |
-      - What's a good amount of exercise for someone in their thirties?
-      - How much exercise should I be getting?
-      - How much exercise is recommended?
-      - Is walking once a day enough exercise?
-      - How much exercise should I do every day?
-      - How many times per week should I go to the gym?
-  - intent: inform
+      - [czarnuch](hateSpeech_ent)
+      - [czarnuchu](hateSpeech_ent)
+      - [czarnuszki](hateSpeech_ent)
+      - [czarnuch](hateSpeech_ent)
+      - [Czarnuchy](hateSpeech_ent)
+      - [Jim Crow](hateSpeech_ent)
+      - [Lesbo](hateSpeech_ent)
+      - [Biała moc](hateSpeech_ent)
+      - [KKK](hateSpeech_ent)
+      - [Klu Klux Klan](hateSpeech_ent)
+      - [supremacja aryjska](hateSpeech_ent)
+      - [Fagot](hateSpeech_ent)
+      - [Ciota](hateSpeech_ent)
+      - [neonazistowskie](hateSpeech_ent)
+      - [Heil Hitler](hateSpeech_ent)
+      - [Heilhitler](hateSpeech_ent)
+      - [Neonazista](hateSpeech_ent)
+      - [Biała supremacja](hateSpeech_ent)
+      - [Cyklon B](hateSpeech_ent)
+      - [Zyklon B](hateSpeech_ent)
+
+  - intent: suicide
     examples: |
-      - a full [8 hours](sleep)
-      - only [four hours](sleep)
-      - about [six hours](sleep)
-      - [low](stress)
-      - [medium](stress)
-      - [high](stress)
-      - Yes, I went for a [run](exercise)
-      - uh huh an hour of [yoga](exercise)
-      - yep, I went for a [hike](exercise)
-      - Yes I took the dog for a [walk](exercise)
-      - Yeah, I played [tennis](exercise)
-      - I went [swimming](exercise)
-      - Took a [spin class](exercise)
-      - Did some [boxing](exercise)
-      - [rock climbing](exercise)
-      - played some [basketball](exercise)
-      - played [football](exercise)
-      - I did a [workout](exercise) video
-      - I want to get up early and go for a run
-      - Be more patient with my family
-      - Try to be a better friend
-      - Make sure to eat better tomorrow
-      - eat less junk food
-      - eat better
-      - spend less time on my phone
-      - don't procrastinate
-      - Go to bed earlier
-      - Don't stay up so late
-      - try to make some time to meditate
-      - i ate pretty healthy overall
-      - lots of fruits and vegetables
-      - I ate a salad
-      - too many snacks
-      - too many sweets
-      - too much junk food
-      - a lot of carbs
-      - too much fatty food
-      - Get more exercise
-  - intent: out_of_scope
-    examples: |
-      - that's not what I want to do
-      - wait stop
-      - you're no help
-      - this is no help at all
-      - how old are you
-      - I want to order a pizza
-      - tell me the weather
-      - this isn't working
-      - I already told you that
-      - don't like that
-      - I don't want to tell you that
-      - none of your business
-      - that's not right
-      - stop asking
-      - nevermind
-      - I want to do something else
-      - I changed my mind
-  - intent: thankyou
-    examples: |
-      - okay great thanks
-      - thank you
-      - sure thanks
-      - thanks bye
-      - thanks
+      - samobójstwo
+      - samobójczy
+      - Zabiję się
+      - Pragnę umrzeć
+      - cięte nadgarstki
+      - Skocz z mostu
+      - Zakończ moje życie
+      - Chcę zakończyć swoje życie
+      - Zabij mnie
+      - Zabij siebie
+      - samobójczy
+      - zabiję się
+      - samospalenie
+      - Seppuku
