--- a/core/domain.yml
+++ b/core/domain.yml
@@ -2,84 +2,43 @@ version: "2.0"
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
+
 intents:
-  - ask_eat_healthy
-  - greet
-  - goodbye
-  - affirm
-  - deny
   - mood_great
   - mood_unhappy
-  - bot_challenge
-  - ask_lower_stress
-  - ask_exercise
-  - inform
-  - out_of_scope
-  - thankyou
+  - insults
+  - religion
+  - drugs
+  - hateSpeech
+  - suicide
+
 entities:
-  - exercise
-  - sleep
-  - stress
-slots:
-  confirm_exercise:
-    type: unfeaturized
-  exercise:
-    type: unfeaturized
-  sleep:
-    type: unfeaturized
-  diet:
-    type: unfeaturized
-  stress:
-    type: unfeaturized
-  goal:
-    type: unfeaturized
+  - hateSpeech_ent
+
+# slots:
+#   confirm_exercise:
+#     type: unfeaturized
+#   exercise:
+#     type: unfeaturized
+#   sleep:
+#     type: unfeaturized
+#   diet:
+#     type: unfeaturized
+#   stress:
+#     type: unfeaturized
+#   goal:
+#     type: unfeaturized
+
 responses:
   utter_greet:
-    - text: "Hi! It's time for your daily wellness check. Tracking healthy habits is a great way to measure your progress over time. Would you like to answer a few questions about your health?"
-  utter_cheer_up:
-    - text: "Here is something to cheer you up:"
-      image: "https://i.imgur.com/nGF1K8f.jpg"
-  utter_did_that_help:
-    - text: "Did that help you?"
+    - text: "👋 Hi! It's time for your daily wellness check. Tracking healthy habits is a great way to measure your progress over time. Would you like to answer a few questions about your health?"
   utter_happy:
     - text: "Great, carry on!"
-  utter_goodbye:
-    - text: "See you tomorrow. Bye!"
-  utter_iamabot:
-    - text: "I am a bot, powered by Rasa."
-  utter_ask_confirm_exercise:
-    - text: Did you exercise yesterday? Don't sweat it if you didn't run a marathon - walks count!
-  utter_ask_exercise:
-    - text: What kind of exercise did you do 💪 ?
-  utter_ask_sleep:
-    - text: "How much sleep did you get 💤  last night?"
-  utter_ask_diet:
-    - text: "Did you stick to a healthy diet 🥦  yesterday?"
+  utter_cheer_up:
+    - text: "🥂 Here is something to cheer you up:"
+      image: "https://i.imgur.com/nGF1K8f.jpg"
   utter_ask_stress:
     - text: "Is your stress level low, medium, or high 🧘 ?"
-  utter_ask_goal:
-    - text: "Setting goals - even small ones - is a great way to focus your day. What do you want to accomplish today 🥇 ?"
-  utter_slots_values:
-    - text: "Here's your daily wellness log:\n
-        - Exercised?: {confirm_exercise}\n
-        - Type of exercise: {exercise}\n
-        - Sleep: {sleep}\n
-        - Stuck to a healthy diet?: {diet}\n
-        - Stress level: {stress}\n
-        - Goal: {goal}"
-  utter_no_worries:
-    - text: "No problem :)"
-  utter_ask_continue:
-    - text: "Sorry, I don't quite understand. Do you want to continue?"
-  utter_stress_info:
-    - text: "It's ok to feel overwhelmed at times. Try to set realistic expectations and exercise time management techniques, like dividing large tasks into more manageable pieces. Relaxation techniques, like deep breathing and meditation, can also be beneficial."
-  utter_exercise_info:
-    - text: "Most healthy adults should aim to get about 150 min of moderate exercise per week. This includes activities like a brisk walk or yard work."
-  utter_diet_info:
-    - text: "A healthy diet includes fruits and vegetables, whole grains, dairy, lean protein, and plant-based fats. While there is room in a healthy diet for treats, added sugar should be eaten sparingly. Aim for a variety of foods, and balance."
-
-actions:
-  - utter_diet_info
 
 ## more forms examples https://github.com/RasaHQ/rasa-form-examples
 forms:
