--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.7-alpine
 WORKDIR /app 
-COPY ./backend /app
+COPY ./requirements.txt /app
 RUN pip3 install -r requirements.txt --no-cache-dir
-# COPY requirements.txt /app
+COPY . /app
 EXPOSE 5000
 ENTRYPOINT ["python3"] 
 CMD ["app.py"]
